--- a/ss/2023-01-23.html
+++ b/ss/2023-01-23.html
@@ -6,7 +6,7 @@
 </head>
 <body class="ss ss1">
 	<div class="ss ss1 main">
-		<div class="date">04 Jan 2023</div>
+		<div class="date">23 Jan 2023</div>
 		<h2>Part 1: Souls for Smuggler's Shiv</h2>
 		<h3>Game 15, 16</h3>
 
@@ -27,8 +27,8 @@
 				</tr>
 				<tr>
 					<td>Dire Rat &times; 6 (Nice kill with Stone Call)</td>
-					<td class="r"></td>
-					<td class="r">?</td>
+					<td class="r">810</td>
+					<td class="r">135</td>
 				</tr>
 				<tr>
 					<td class="date" colspan=3>Day 70</td>
@@ -40,69 +40,86 @@
 				</tr>
 				<tr>
 					<td>Shiv Dragon &times; 1 (Kill steal to Stick)</td>
-					<td class="r"></td>
-					<td class="r">?</td>
+					<td class="r">600</td>
+					<td class="r">100</td>
 				</tr>
 
 				<tr>
 					<td class="date" colspan=3>Day 71</td>
 				</tr>
 				<tr>
-					<td>Explore &times; 7. Wreck of the Bloodwalker.</td>
+					<td>Explore &times; 7. </td>
 					<td class="r"></td>
 					<td class="r">70</td>
 				</tr>
 				<tr>
+					<td colspan=3>Wreck of the <cite>Bloodwalker</cite>.</td>
+				</tr>
+				<tr>
 					<td class="date" colspan=3>Day 72</td>
+					</tr>
 				<tr>
 					<td>Explore &times; 5.</td>
 					<td class="r"></td>
 					<td class="r">50</td>
 				</tr>
 				<tr>
-					<td>Zombie &times; 6. Wreck of Alma's Ruin.</td>
-					<td class="r"></td>
-					<td class="r">?</td>
+					<td colspan=3>Wreck of <cite>Alma's Ruin</cite>.</td>
+					</tr>
+				<tr>
+					<td>Zombie &times; 6.</td>
+					<td class="r">600</td>
+					<td class="r">100</td>
 				</tr>
 				<tr>
 					<td class="date" colspan=3>Day 73</td>
 				</tr>
 				<tr>
-					<td>Explore &times; 7. Wreck of the Redwake. Found Aycenia.</td>
+					<td>Explore &times; 7.</td>
 					<td class="r"></td>
 					<td class="r">70</td>
+				</tr>
+				<tr>
+					<td colspan=3> Wreck of the <cite>Redwake</cite>. Found Aycenia.</td>
 				</tr>
 				<tr>
 					<td class="date" colspan=3>Day 74</td>
 				</tr>
 				<tr>
-					<td>Explore &times; 4. Wreck of Thrune's Fang.</td>
+					<td>Explore &times; 4.</td>
 					<td class="r"></td>
 					<td class="r">40</td>
 				</tr>
 				<tr>
+					<td colspan="2"></td>
+					<td class="total">645</td>
+				</tr>
+				<tr>
+					<td colspan=3>Wreck of <cite>Thrune's Fang</cite>. Mother Thrunefang (again).</td>
+				</tr>
+				<tr>
 					<td>Skeleton &times; 6</td>
 					<td class="r"></td>
-					<td class="r">?</td>
+					<td class="r">65</td>
 				</tr>
 				<tr>
 					<td>Ghost &times; 2</td>
-					<td class="r"></td>
-					<td class="r">?</td>
+					<td class="r">1600</td>
+					<td class="r">267</td>
 				</tr>
 				<tr>
-					<td>Mother Thrunefang, again.</td>
-					<td class="r"></td>
-					<td class="r">?</td>
+					<td>Mother Thrunefang (half xp)</td>
+					<td class="r">600</td>
+					<td class="r">100</td>
 				</tr>
 
 				<tr>
 					<td colspan="2"></td>
-					<td class="total">?</td>
+					<td class="total">432</td>
 				</tr>
 				<tr>
 					<td colspan="2"></td>
-					<td class="gt">9831 + ?</td>
+					<td class="gt">10908</td>
 				</tr>
 			</table>
 		</div>
