--- a/ss/index.html
+++ b/ss/index.html
@@ -13,8 +13,14 @@
 
 $.ajaxSetup({ cache: false });
 
-const pages = ['2022-09-15', '2022-09-27', '2022-10-04', '2022-10-15', '2022-10-18', '2022-10-26', '2022-11-02', '2022-11-13', 
-	'2022-11-18', '2022-11-27','2022-12-06','2022-12-13','2023-01-04', '2023-01-23','2023-01-26', ];
+const pages = [
+	'2022-09-15', '2022-09-27', 
+	'2022-10-04', '2022-10-15', '2022-10-18', '2022-10-26', 
+	'2022-11-02', '2022-11-13', '2022-11-18', '2022-11-27',
+	'2022-12-06','2022-12-13',
+	'2023-01-04', '2023-01-23','2023-01-26', 
+	'2023-02-16',
+	];
 
 const lastPage = pages.length-1;
 
