--- a/ss/2023-02-23.html
+++ b/ss/2023-02-23.html
@@ -223,8 +223,8 @@
 			4 tide stones. There is an almighty lightning stroke exactly like the
 			one on day 60, and the water in the cove drains. Revealed is the
 			wreck of the <cite class="ship">Salty Strumpet</cite>, and far across
-			the cove a set of big double doors with snake carvings all over them,
-			leading into the depths of the mountain.
+			the cove under the waterline a set of big double doors with snake
+			carvings all over them, leading into the depths of the mountain.
 		</p>
 		<p>
 			It is one in the afternoon, day 102 since the <cite class="ship">Jenivere</cite>
