--- a/ss/2023-02-23.html
+++ b/ss/2023-02-23.html
@@ -114,7 +114,7 @@
 			organised play, I have used that one many, many times.</div>
 		<p>
 			Volka hits him with <i class="spell">Call Lightning</i>, but in the
-			end it's down to Nix, Keigh, and Kraig stabbing and puching him until
+			end it's down to Nix, Keigh, and Kraig stabbing and punching him until
 			he is dead.
 		</p>
 		<p>Well! That was super easy! So easy, they opt to explore some
