--- a/ss/2023-02-23.html
+++ b/ss/2023-02-23.html
@@ -93,29 +93,30 @@
 			<li>Battle the Red Mountain Devil</li>
 		</ol>
 		<p>Part 1 goes off without a hitch. Part 2 takes a little longer,
-			as Mr RMD is not actually at Red Mountain. While there, they take
-			note of the rocks. The vibrant red colour is not natural and not
-			rust. They also spot remnants of cannibal activity: seashells, human
-			bones, pentagrams. But the cannibals are all gone.</p>
+			as Mr RMD is not actually at Red Mountain. While there they take note
+			of the rocks. The vibrant red colour is not natural and not rust.
+			They also spot remnants of cannibal activity: seashells, human bones,
+			pentagrams. But the cannibals are all gone.</p>
 		<p>Nevertheless, the man of the hour shows up. He targets the most
-			unarmoured character for his attack, as if he manages to drain blood,
-			he gets a considerable buff. Unluckily for him, the most unarmoured
-			character is Keigh, the monk. It does not go well.</p>
+			unarmoured character for his attack, because if he manages to drain
+			blood he gets a considerable buff. Unluckily for him the most
+			unarmoured character is Keigh, the monk. It does not go well.</p>
 		<p>Meanwhile, Jack P summons a small air elemental which traps him
 			in a whirlwind. He is grounded for the round.</p>
-		<div class='ooc'>I think you can get a whirlwind until the air
-			elemental is large, but RMD rolled a 1 right in front of everyone.</div>
+		<div class='ooc'>I think you don't get a whirlwind unless the
+			air elemental is large or bigger, but RMD rolled a 1 right in front
+			of everyone so meh.</div>
 		<p>
 			Learning his lesson he targets Horse, the goat. He manages to
-			grapple, but either Jack or Widmanstaaten drops <i class="spell">Liberating
+			grapple, but either Jack or Widmanstäten drops <i class="spell">Liberating
 				Command</i> and that's the end of that.
 		</p>
 		<div class='ooc'>I can hardly complain - as a player doing Paizo
 			organised play, I have used that one many, many times.</div>
 		<p>
 			Volka hits him with <i class="spell">Call Lightning</i>, but in the
-			end it's down to Nix, Keigh, and Kraig stabbing and punching him until
-			he is dead.
+			end it's down to Nix, Keigh, and Kraig stabbing and punching him
+			until he is dead.
 		</p>
 		<p>Well! That was super easy! So easy, they opt to explore some
 			hexes.</p>
@@ -134,12 +135,12 @@
 			base of the pyramid.
 		</div>
 
-		<p>Day 101 they return from port Jenivere and in the morning
-			explore more of Red Mountain. they spot a sunken ship in a cove in
-			the interior of the island, and opt to take a look. The DM,
-			suspiciously, pulls out a predrawn map of the terrain. There is a
-			deep ravine leading down to the cove, and a set of steps and bridges
-			going down. More interestingly, there is some sort of structure.</p>
+		<p>Day 101 they explore more of Red Mountain. They spot a sunken
+			ship in a cove in the interior of the island, and opt to take a look.
+			The DM, suspiciously, pulls out a predrawn map of the terrain. There
+			is a deep ravine leading down to the cove, and a set of steps and
+			bridges going down. More interestingly, there is some sort of
+			structure.</p>
 		<p>The structure, definitely, is the one mentioned in the caves of
 			the mother - that bit where Ieana (presumably) had cleared off one of
 			the carvings to read its text:</p>
@@ -152,7 +153,7 @@
 			Bare What Lies Below and Cast Down Your Enemies on the Waves above.</div>
 		<p>Furthermore, this structure has also been partially excavated
 			by a trained archeologist. And so, being fully genre-aware of how
-			D&amp;D works, they decide to destroy the structure.</p>
+			D&amp;D works, they decide to destroy it.</p>
 		<div class="ooc">Does anyone else have players like this? Shut
 			up. You all do, I know.</div>
 		<p>Sadly, the structure is protected by some sort of divine
@@ -185,6 +186,9 @@
 			perform the tide stone ritual and lower the level of water in the
 			cove, they might be able to follow the path and maybe even loot that
 			sunken wreck!</p>
+		<div class="ooc">You know, I should have let them destroy the
+			tide stones and then figure out what to do. A DM should say "yes".
+			Anyway.</div>
 		<p>The ritual calls for:</p>
 		<ol>
 			<li>The blood of a thinking creature</li>
