--- a/decklighting/index.html
+++ b/decklighting/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Ng</title>
-  <base href="/">
+  <base href=".">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.bce20d32e36e1709e1d2.css"></head>
